# seedaudio-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
skills/seedaudio/: SKILL.md
skills/seedaudio/references/: voices-and-style.md
src/seedaudio_cli/: __main__.py
src/seedaudio_cli/commands/: config.py  dialogue.py  narrate.py  synthesize.py  voices.py
src/seedaudio_cli/core/: client.py  concat.py  config.py  dialogue.py  naming.py  request.py  segment.py  synth.py
src/seedaudio_cli/data/: voices.json
src/seedaudio_cli/framework/: envelope.py  errors.py
tests/: conftest.py
tests/integration/: test_config.py  test_dialogue.py  test_narrate.py  test_synthesize.py  test_voices.py
tests/unit/core/: test_client.py  test_concat.py  test_config.py  test_dialogue.py  test_naming.py  test_request.py  test_segment.py  test_synth.py
tests/unit/framework/: test_envelope.py  test_errors.py
